add all endpoints to swagger, work on readme
